# fair_pick_rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
src/: lib.rs  prng.rs  tests.rs
