[package]
name = "fair_pick_rs"
version = "0.1.0"
edition = "2024"
description = "Deterministic, verifiable draw algorithm for provably fair random selection."
license = "MIT"

[dependencies]
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
hex = "0.4"

[profile.release]
lto = true
